# zenypst

./: .gitignore  CLAUDE.md  SPEC.md  dev.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.claude/commands/: push-dev.md  release.md
.github/workflows/: build-windows.yml  build.yml
src/: App.vue  main.ts  quasar-variables.sass  splitpanes.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  world.rs
src-tauri/src/commands/: file.rs  mod.rs  native_compile.rs  settings.rs  template.rs  typst.rs
src-tauri/src/utils/: mod.rs  typst_cli.rs
src/assets/styles/: global.scss
src/components/editor/: EditorPanel.vue  TabBar.vue
src/components/editor/codemirror/: font-completion.ts  setup.ts  theme.ts  typst-language.ts
src/components/layout/: ActivityBar.vue  AppShell.vue  StatusBar.vue  Toolbar.vue
src/components/preview/: CompileStatus.vue  PdfViewer.vue
src/components/settings/: FontSettings.vue  PreviewSettings.vue  SettingsDialog.vue  ThemeEditor.vue  TypstSettings.vue
src/components/sidebar/: FileTree.vue  FileTreeItem.vue
src/components/template/: TemplateEditorDialog.vue  TemplateManager.vue  TemplatePickerDialog.vue
src/composables/: useCompiler.ts  useContextMenu.ts  useFileOps.ts  useKeybindings.ts  useTheme.ts  useVersionCheck.ts
src/locales/: en.ts
src/plugins/: i18n.ts  quasar.ts  vuetify.ts
src/router/: index.ts
src/stores/: editor.ts  fileTree.ts  preview.ts  settings.ts  template.ts
src/types/: file.ts  index.ts  settings.ts  template.ts  theme.ts
src/utils/: path.ts
