[package]
name = "zenypst"
version = "0.1.0"
description = "A Typst desktop editor"
authors = ["Zenypst"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zenypst_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
async-recursion = "1.0"
typst = "0.14.2"
typst-render = "0.14.2"
typst-assets = { version = "0.14.2", features = ["fonts"] }
base64 = "0.22"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
